# Continual-DreamBooth-LoRA

./: .gitignore  README.md  experiment.ipynb  main.py  pyproject.toml  requirements.txt  run-faithful.sh  run-naive-sequential.sh  run-scaffold.sh  test-base-model.sh  test-ccip.sh
config/: schema.py
configs/: tasks_5char.yaml  tasks_5char_faithful.yaml  tasks_5char_naive.yaml  tasks_5char_scaffold.yaml
data/: dataset.py
eval/: generator.py  report.py
methods/: base.py  c_lora_scaffold.py  faithful_c_lora.py  naive_sequential.py
orchestrator/: pipeline.py
scripts/: validate_setup.py
src/: __init__.py  main.py
src/config/: schema.py
src/data/: dataset.py
src/eval/: generator.py  metrics.py  report.py
src/methods/: c_lora_scaffold.py  faithful_c_lora.py  naive_sequential.py
src/orchestrator/: pipeline.py
src/training/: trainer.py
src/utils/: io.py  logging.py  seed.py
test/: test-base-model-output.py  test-ccip.py
training/: trainer.py
utils/: io.py
